[gd_scene load_steps=29 format=3 uid="uid://cyiacwvceu3mp"]

[ext_resource type="Script" uid="uid://cfbetsvoob6r8" path="res://classes/grips.gd" id="1_eyfoh"]
[ext_resource type="Script" uid="uid://dfdneti23ltj3" path="res://classes/limb.gd" id="1_k7pjy"]

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_eyfoh"]
target_nodepath = NodePath("Palm/IK Targets/Limb Thumb/Thumb Target")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Palm/Thumb1")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Palm/Thumb1/Thumb2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_cmdsa"]
target_nodepath = NodePath("Palm/IK Targets/Limb Index/Index Target")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("Palm/Index1")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("Palm/Index1/Index2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_k7pjy"]
target_nodepath = NodePath("Palm/IK Targets/Limb Mid/Mid Target")
joint_one_bone_idx = 5
joint_one_bone2d_node = NodePath("Palm/Mid1")
joint_two_bone_idx = 6
joint_two_bone2d_node = NodePath("Palm/Mid1/Mid2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_m1v21"]
target_nodepath = NodePath("Palm/IK Targets/Limb Ring/Ring Target")
joint_one_bone_idx = 7
joint_one_bone2d_node = NodePath("Palm/Ring1")
joint_two_bone_idx = 8
joint_two_bone2d_node = NodePath("Palm/Ring1/Ring2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_kdemd"]
target_nodepath = NodePath("Palm/IK Targets/Limb Pinky/Pinky Target")
joint_one_bone_idx = 9
joint_one_bone2d_node = NodePath("Palm/Pinky1")
joint_two_bone_idx = 10
joint_two_bone2d_node = NodePath("Palm/Pinky1/Pinky2")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_n04oe"]
enabled = true
modification_count = 5
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_eyfoh")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_cmdsa")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_k7pjy")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_m1v21")
modifications/4 = SubResource("SkeletonModification2DTwoBoneIK_kdemd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmdsa"]
size = Vector2(20.8052, 11.2266)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7pjy"]
size = Vector2(16.2269, 8.61668)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f44jc"]
size = Vector2(9.47754, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysndn"]
size = Vector2(14.2694, 4.31047)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n04oe"]
size = Vector2(10.6153, 23.1294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yinqy"]
size = Vector2(6.99271, 23.6071)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ligq1"]
size = Vector2(7.47809, 18.2192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1wyv"]
size = Vector2(7.38621, 23.6805)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v24qn"]
size = Vector2(7.09028, 13.4897)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfalx"]
size = Vector2(6.26327, 17.3145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdemd"]
size = Vector2(11.0199, 21.1739)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cw0k3"]
size = Vector2(15.6571, 8.71428)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1v21"]
size = Vector2(9.34916, 20.8332)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eb3b"]
size = Vector2(14.1109, 4.15101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq5tb"]
size = Vector2(10.6616, 23.0368)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imbvm"]
size = Vector2(7.11961, 23.5847)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiqd4"]
size = Vector2(7.47812, 18.5394)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1yym"]
size = Vector2(7.23678, 23.5022)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohfqw"]
size = Vector2(6.8468, 13.1532)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dth4f"]
size = Vector2(6.33412, 17.4449)

[node name="Hand" type="CharacterBody2D"]
position = Vector2(363, 159)
scale = Vector2(2.25, 2.25)
collision_mask = 12648704
input_pickable = true
script = ExtResource("1_k7pjy")
push_force = 0.75

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2(1, -1)
modification_stack = SubResource("SkeletonModificationStack2D_n04oe")
script = ExtResource("1_eyfoh")

[node name="Palm" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="IK Targets" type="Node2D" parent="Skeleton2D/Palm"]
position = Vector2(-1.38724, -9.1817)
rotation = 0.0673835
scale = Vector2(1.00001, 1.00001)

[node name="Limb Thumb" type="CharacterBody2D" parent="Skeleton2D/Palm/IK Targets"]
position = Vector2(-42.0749, 39.1031)
collision_layer = 2
collision_mask = 12648704
input_pickable = true
script = ExtResource("1_k7pjy")
push_force = 0.125
metadata/_custom_type_script = "uid://dfdneti23ltj3"

[node name="Thumb Target" type="Node2D" parent="Skeleton2D/Palm/IK Targets/Limb Thumb"]
position = Vector2(-1.14441e-05, 2.86102e-06)

[node name="Inner Thumb1" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Thumb"]
z_index = 11
position = Vector2(10.2017, -17.0383)
rotation = 2.83646
scale = Vector2(0.999985, 0.999985)
shape = SubResource("RectangleShape2D_cmdsa")

[node name="Inner Thumb2" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Thumb"]
z_index = 11
position = Vector2(-0.507217, -7.59892)
rotation = 1.53066
scale = Vector2(0.999989, 0.999989)
shape = SubResource("RectangleShape2D_k7pjy")

[node name="Limb Index" type="CharacterBody2D" parent="Skeleton2D/Palm/IK Targets"]
position = Vector2(-20.884, 85.7817)
rotation = -1.5708
scale = Vector2(1.59998, 1.59998)
collision_layer = 4
collision_mask = 12648704
input_pickable = true
script = ExtResource("1_k7pjy")
push_force = 0.125

[node name="Inner Index1" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Index"]
z_index = 11
position = Vector2(20.9176, 6.7138)
rotation = 1.34288
scale = Vector2(0.624999, 0.624999)
shape = SubResource("RectangleShape2D_f44jc")

[node name="Inner Index2" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Index"]
z_index = 11
position = Vector2(6.85776, 3.78152)
rotation = -2.6507
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_ysndn")

[node name="Index Target" type="Node2D" parent="Skeleton2D/Palm/IK Targets/Limb Index"]
rotation = 1.5708
scale = Vector2(0.625009, 0.625009)

[node name="Limb Mid" type="CharacterBody2D" parent="Skeleton2D/Palm/IK Targets"]
position = Vector2(10.3147, 87.6853)
collision_layer = 8
collision_mask = 12648704
input_pickable = true
script = ExtResource("1_k7pjy")
push_force = 0.125
metadata/_custom_type_script = "uid://dfdneti23ltj3"

[node name="Mid Target" type="Node2D" parent="Skeleton2D/Palm/IK Targets/Limb Mid"]
position = Vector2(0, -2.28882e-05)

[node name="Inner Mid1" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Mid"]
z_index = 11
position = Vector2(-4.3018, -37.8568)
rotation = -0.256951
scale = Vector2(0.999987, 0.999987)
shape = SubResource("RectangleShape2D_n04oe")

[node name="Inner Mid2" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Mid"]
z_index = 11
position = Vector2(-1.87308, -12.903)
rotation = -0.00342429
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_yinqy")

[node name="Limb Ring" type="CharacterBody2D" parent="Skeleton2D/Palm/IK Targets"]
position = Vector2(25.6722, 77.6285)
collision_layer = 16
collision_mask = 12648704
input_pickable = true
script = ExtResource("1_k7pjy")
push_force = 0.125
metadata/_custom_type_script = "uid://dfdneti23ltj3"

[node name="Ring Target" type="Node2D" parent="Skeleton2D/Palm/IK Targets/Limb Ring"]
position = Vector2(1.15633e-05, 2.42144e-06)

[node name="Inner Ring1" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Ring"]
z_index = 11
position = Vector2(-7.71581, -32.6165)
rotation = -0.472664
scale = Vector2(0.999989, 0.999989)
shape = SubResource("RectangleShape2D_ligq1")

[node name="Inner Ring2" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Ring"]
z_index = 11
position = Vector2(-1.07802, -10.3382)
rotation = -0.17408
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_y1wyv")

[node name="Limb Pinky" type="CharacterBody2D" parent="Skeleton2D/Palm/IK Targets"]
position = Vector2(42.3519, 57.4598)
collision_layer = 32
collision_mask = 12648704
input_pickable = true
script = ExtResource("1_k7pjy")
push_force = 0.125
metadata/_custom_type_script = "uid://dfdneti23ltj3"

[node name="Pinky Target" type="Node2D" parent="Skeleton2D/Palm/IK Targets/Limb Pinky"]
position = Vector2(7.62939e-06, 3.8147e-06)

[node name="Inner Pinky1" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Pinky"]
z_index = 11
position = Vector2(-14.9761, -17.7122)
rotation = -0.753265
scale = Vector2(0.999989, 0.999989)
shape = SubResource("RectangleShape2D_v24qn")

[node name="Inner Pinky2" type="CollisionShape2D" parent="Skeleton2D/Palm/IK Targets/Limb Pinky"]
z_index = 11
position = Vector2(-4.39485, -5.717)
rotation = -0.714918
scale = Vector2(0.999997, 0.999997)
shape = SubResource("RectangleShape2D_bfalx")

[node name="PalmPolygon" type="Polygon2D" parent="Skeleton2D/Palm"]
scale = Vector2(1.27778, 1)
skeleton = NodePath("../..")
polygon = PackedVector2Array(-17.2174, -8, -18, 30, 18, 26, 16.4348, -7)

[node name="Palm Select" type="Button" parent="Skeleton2D/Palm/PalmPolygon"]
anchors_preset = -1
anchor_left = -0.011
anchor_top = -0.012
anchor_right = 0.005
anchor_bottom = 0.017
offset_left = -1.03928
offset_top = 0.776001
offset_right = 6.96072
offset_bottom = 8.776

[node name="Thumb1" type="Bone2D" parent="Skeleton2D/Palm"]
position = Vector2(-23, 4)
rotation = 0.612801
rest = Transform2D(0.81804, 0.575161, -0.575161, 0.81804, -23, 4)
metadata/_local_pose_override_enabled_ = true

[node name="Thumb2" type="Bone2D" parent="Skeleton2D/Palm/Thumb1"]
z_index = 1
position = Vector2(-19, 17)
rotation = 2.41168
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(-0.745234, 0.666802, -0.666802, -0.745234, -19, 17)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = -1.82123e-06
metadata/_local_pose_override_enabled_ = true

[node name="Thumb2Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Thumb1/Thumb2"]
rotation = 0.0715228
color = Color(0.476252, 0.380246, 0.346791, 1)
skeleton = NodePath("../../../..")
polygon = PackedVector2Array(-0.559063, 2.77263, 0.0453796, -8.02765, 16.9366, -5.25504, 16.6357, 3.35436)

[node name="Thumb Select" type="Button" parent="Skeleton2D/Palm/Thumb1/Thumb2/Thumb2Polygon"]
z_index = 3
anchors_preset = -1
anchor_left = -0.052
anchor_top = 0.006
anchor_right = -0.045
anchor_bottom = 0.019
offset_left = 8.90461
offset_top = -4.49316
offset_right = 16.9046
offset_bottom = 3.50684

[node name="Thumb Anchor" type="Node2D" parent="Skeleton2D/Palm/Thumb1/Thumb2"]
position = Vector2(16.0009, -0.000105707)

[node name="RT Outer Thumb2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Thumb1/Thumb2"]
position = Vector2(8.41795, -0.717277)
rotation = 0.120837
remote_path = NodePath("../../../../../Outer Thumb2")

[node name="RT Inner Thumb2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Thumb1/Thumb2"]
position = Vector2(8.41795, -0.717277)
rotation = 0.120837
remote_path = NodePath("../../../IK Targets/Limb Thumb/Inner Thumb2")

[node name="Thumb1Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Thumb1"]
color = Color(0.666569, 0.666569, 0.666569, 1)
skeleton = NodePath("../../..")
polygon = PackedVector2Array(-2.87582, -4.09019, 4.93356, 8.75554, -13, 23, -20, 14)

[node name="RT Outer Thumb1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Thumb1"]
position = Vector2(-8.05188, 10.7788)
rotation = 0.875315
scale = Vector2(0.999995, 0.999995)
remote_path = NodePath("../../../../Outer Thumb1")

[node name="RT Inner Thumb1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Thumb1"]
position = Vector2(-7.6154, 11.0909)
rotation = 2.45494
scale = Vector2(0.999995, 0.999995)
remote_path = NodePath("../../IK Targets/Limb Thumb/Inner Thumb1")

[node name="Index1" type="Bone2D" parent="Skeleton2D/Palm"]
position = Vector2(-16, 30)
rotation = -0.1234
scale = Vector2(0.999996, 0.999996)
rest = Transform2D(0.992392, -0.123087, 0.123087, 0.992392, -16, 30)
metadata/_local_pose_override_enabled_ = true

[node name="Index2" type="Bone2D" parent="Skeleton2D/Palm/Index1"]
z_index = 1
position = Vector2(-5, 23)
rotation = 1.78486
scale = Vector2(1.6, 1.6)
rest = Transform2D(-0.339887, 1.56348, -1.56348, -0.339887, -5, 23)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 2.04906e-05
metadata/_local_pose_override_enabled_ = true

[node name="Index2Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Index1/Index2"]
color = Color(0.476252, 0.380246, 0.346791, 1)
skeleton = NodePath("../../../../..")
polygon = PackedVector2Array(0.887119, 2.41943, 0.680382, -3.28194, 15.7886, -2.77266, 15.6189, 2.26341)

[node name="Index Select" type="Button" parent="Skeleton2D/Palm/Index1/Index2/Index2Polygon"]
offset_left = 7.49463
offset_top = -3.73989
offset_right = 15.4946
offset_bottom = 4.26011

[node name="Index Anchor" type="Node2D" parent="Skeleton2D/Palm/Index1/Index2"]
position = Vector2(16.0006, 0.000747681)

[node name="RT Outer Index2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Index1/Index2"]
position = Vector2(8.16872, -0.000366092)
rotation = -0.0129895
remote_path = NodePath("../../../../../Outer Index2")

[node name="RT Inner Index2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Index1/Index2"]
position = Vector2(8.16872, -0.000366092)
rotation = -0.0129895
remote_path = NodePath("../../../IK Targets/Limb Index/Inner Index2")

[node name="Intex1Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Index1"]
position = Vector2(0, -1)
color = Color(0.666569, 0.666569, 0.666569, 1)
skeleton = NodePath("../../..")
polygon = PackedVector2Array(-7, 2, 5, 1, 0, 25, -9, 24)

[node name="RT Outer Index1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Index1"]
position = Vector2(-2.6245, 12.0877)
rotation = 0.139428
remote_path = NodePath("../../../../Outer Index1")

[node name="RT Inner Index1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Index1"]
position = Vector2(-2.62455, 12.0877)
rotation = 0.131854
remote_path = NodePath("../../IK Targets/Limb Index/Inner Index1")

[node name="Mid1" type="Bone2D" parent="Skeleton2D/Palm"]
position = Vector2(0, 28)
rotation = -0.154738
scale = Vector2(0.999997, 0.999997)
rest = Transform2D(0.988049, -0.154121, 0.154121, 0.988049, 0, 28)
metadata/_local_pose_override_enabled_ = true

[node name="Mid2" type="Bone2D" parent="Skeleton2D/Palm/Mid1"]
z_index = 1
position = Vector2(-2, 26)
rotation = 1.64757
scale = Vector2(1.585, 1.585)
rest = Transform2D(-0.121563, 1.58033, -1.58033, -0.121563, -2, 26)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 2.04906e-05
metadata/_local_pose_override_enabled_ = true

[node name="Mid2Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Mid1/Mid2"]
color = Color(0.476252, 0.380246, 0.346791, 1)
skeleton = NodePath("../../../..")
polygon = PackedVector2Array(0.571377, 3.79493, 0.0396423, -2.52335, 15.8007, -1.64476, 15.5285, 3.76418)

[node name="Mid Select" type="Button" parent="Skeleton2D/Palm/Mid1/Mid2/Mid2Polygon"]
anchors_preset = -1
anchor_left = -0.024
anchor_top = 0.074
anchor_right = -0.017
anchor_bottom = 0.086
offset_left = 7.0
offset_top = -4.0
offset_right = 15.0
offset_bottom = 4.0

[node name="Mid Anchor" type="Node2D" parent="Skeleton2D/Palm/Mid1/Mid2"]
position = Vector2(16.0006, 0.000744581)

[node name="RT Outer Mid2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Mid1/Mid2"]
position = Vector2(7.84997, 1.11645)
rotation = -1.5662
scale = Vector2(0.630923, 0.630923)
remote_path = NodePath("../../../../../Outer Mid2")

[node name="RT Inner Mid2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Mid1/Mid2"]
position = Vector2(7.84997, 1.11645)
rotation = -1.5662
scale = Vector2(0.630923, 0.630923)
remote_path = NodePath("../../../IK Targets/Limb Mid/Inner Mid2")

[node name="Mid1Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Mid1"]
color = Color(0.666569, 0.666569, 0.666569, 1)
skeleton = NodePath("../../..")
polygon = PackedVector2Array(-7, 1, 4, 0, 2, 25, -8, 26)

[node name="RT Outer Mid1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Mid1"]
position = Vector2(-1.98828, 12.8471)
rotation = 0.0608187
remote_path = NodePath("../../../../Outer Mid1")

[node name="RT Inner Mid1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Mid1"]
position = Vector2(-1.98828, 12.8471)
rotation = 0.0608187
remote_path = NodePath("../../IK Targets/Limb Mid/Inner Mid1")

[node name="Ring1" type="Bone2D" parent="Skeleton2D/Palm"]
position = Vector2(12, 27)
rotation = -0.260602
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.966234, -0.257662, 0.257662, 0.966234, 12, 27)
metadata/_local_pose_override_enabled_ = true

[node name="Ring2" type="Bone2D" parent="Skeleton2D/Palm/Ring1"]
z_index = 1
position = Vector2(0, 20)
rotation = 1.5708
scale = Vector2(1.495, 1.495)
rest = Transform2D(-4.21786e-07, 1.495, -1.495, -4.21786e-07, 0, 20)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = -1.36604e-05
metadata/_local_pose_override_enabled_ = true

[node name="Ring2Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Ring1/Ring2"]
color = Color(0.476252, 0.380246, 0.346791, 1)
skeleton = NodePath("../../../..")
polygon = PackedVector2Array(0.616282, 3.35458, 0.0420265, -2.67525, 17.3434, -3.57623, 17.3576, 2.27961)

[node name="Ring Select" type="Button" parent="Skeleton2D/Palm/Ring1/Ring2/Ring2Polygon"]
anchors_preset = -1
anchor_left = -0.001
anchor_top = 0.065
anchor_right = 0.006
anchor_bottom = 0.077
offset_left = 8.06922
offset_top = -4.88899
offset_right = 16.0692
offset_bottom = 3.11101

[node name="Ring Anchor" type="Node2D" parent="Skeleton2D/Palm/Ring1/Ring2"]
position = Vector2(16.0006, 0.000744581)

[node name="RT Outer Ring2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Ring1/Ring2"]
position = Vector2(9.04751, -0.06087)
rotation = -1.63222
scale = Vector2(0.668904, 0.668904)
remote_path = NodePath("../../../../../Outer Ring2")

[node name="RT Inner Ring2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Ring1/Ring2"]
position = Vector2(9.04751, -0.06087)
rotation = -1.63222
scale = Vector2(0.668904, 0.668904)
remote_path = NodePath("../../../IK Targets/Limb Ring/Inner Ring2")

[node name="Ring1Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Ring1"]
color = Color(0.666569, 0.666569, 0.666569, 1)
skeleton = NodePath("../../..")
polygon = PackedVector2Array(-6, 1, 2, 0, 4, 19, -5, 20)

[node name="RT Outer Ring1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Ring1"]
position = Vector2(-1.50953, 9.93587)
rotation = -0.104912
remote_path = NodePath("../../../../Outer Ring1")

[node name="RT Inner Ring1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Ring1"]
position = Vector2(-1.50953, 9.93587)
rotation = -0.104912
remote_path = NodePath("../../IK Targets/Limb Ring/Inner Ring1")

[node name="Pinky1" type="Bone2D" parent="Skeleton2D/Palm"]
position = Vector2(19, 26)
rotation = -0.412971
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.915932, -0.401332, 0.401332, 0.915932, 19, 26)
metadata/_local_pose_override_enabled_ = true

[node name="Pinky2" type="Bone2D" parent="Skeleton2D/Palm/Pinky1"]
z_index = 1
position = Vector2(5, 14)
rotation = 1.22777
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.336337, 0.941741, -0.941741, 0.336337, 5, 14)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 2.04906e-05
metadata/_local_pose_override_enabled_ = true

[node name="Pinky2Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Pinky1/Pinky2"]
color = Color(0.476252, 0.380246, 0.346791, 1)
skeleton = NodePath("../../../..")
polygon = PackedVector2Array(0.402611, 4.45398, 0.267593, 0.1544, 0.163574, -3.15804, 18.2496, -4.51106, 18.4576, 2.55698)

[node name="Pinky Select" type="Button" parent="Skeleton2D/Palm/Pinky1/Pinky2/Pinky2Polygon"]
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.06
anchor_right = 0.024
anchor_bottom = 0.073
offset_left = 10.1121
offset_top = -4.83034
offset_right = 18.1121
offset_bottom = 3.16966

[node name="Pinky Anchor" type="Node2D" parent="Skeleton2D/Palm/Pinky1/Pinky2"]
position = Vector2(16.0006, 0.000744581)

[node name="RT Outer Pinky2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Pinky1/Pinky2"]
position = Vector2(8.79099, 0.174326)
rotation = -1.6545
scale = Vector2(1.00001, 1.00001)
remote_path = NodePath("../../../../../Outer Pinky2")

[node name="RT Inner Pinky2" type="RemoteTransform2D" parent="Skeleton2D/Palm/Pinky1/Pinky2"]
position = Vector2(8.79099, 0.174326)
rotation = -1.6545
scale = Vector2(1.00001, 1.00001)
remote_path = NodePath("../../../IK Targets/Limb Pinky/Inner Pinky2")

[node name="Pinky1Polygon" type="Polygon2D" parent="Skeleton2D/Palm/Pinky1"]
position = Vector2(0, -3)
color = Color(0.666569, 0.666569, 0.666569, 1)
skeleton = NodePath("../../..")
polygon = PackedVector2Array(-4, 4, 4, 3, 8, 15, 1, 18)

[node name="RT Outer Pinky1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Pinky1"]
position = Vector2(1.85688, 7.38594)
rotation = -0.340087
remote_path = NodePath("../../../../Outer Pinky1")

[node name="RT Inner Pinky1" type="RemoteTransform2D" parent="Skeleton2D/Palm/Pinky1"]
position = Vector2(1.85688, 7.38594)
rotation = -0.340087
remote_path = NodePath("../../IK Targets/Limb Pinky/Inner Pinky1")

[node name="Outer Thumb1" type="CollisionShape2D" parent="."]
position = Vector2(-33.9319, 9.2165)
rotation = 1.32422
scale = Vector2(0.999995, 0.999995)
shape = SubResource("RectangleShape2D_kdemd")

[node name="Outer Thumb2" type="CollisionShape2D" parent="."]
position = Vector2(-44.9944, 18.3841)
rotation = 1.59805
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_cw0k3")

[node name="Outer Index1" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(-14.0289, 41.3311)
rotation = -0.152964
scale = Vector2(0.999996, 0.999996)
shape = SubResource("RectangleShape2D_m1v21")

[node name="Outer Index2" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(-20.2245, 63.4599)
rotation = 2.12907
scale = Vector2(1.59999, 1.59999)
shape = SubResource("RectangleShape2D_0eb3b")

[node name="Outer Mid1" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(2.25696, 39.9391)
rotation = -0.189568
scale = Vector2(0.999997, 0.999997)
shape = SubResource("RectangleShape2D_nq5tb")

[node name="Outer Mid2" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(2.99998, 65)
rotation = 0.0639592
scale = Vector2(1.00001, 1.00001)
shape = SubResource("RectangleShape2D_imbvm")

[node name="Outer Ring1" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(14.4978, 35.9376)
rotation = -0.40528
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_wiqd4")

[node name="Outer Ring2" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(19.6205, 58.6126)
rotation = -0.106697
scale = Vector2(1.00001, 1.00001)
shape = SubResource("RectangleShape2D_h1yym")

[node name="Outer Pinky1" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(24.2504, 31.3194)
rotation = -0.685881
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_ohfqw")

[node name="Outer Pinky2" type="CollisionShape2D" parent="."]
z_index = 11
position = Vector2(34, 44)
rotation = -0.647534
scale = Vector2(1.00001, 1.00001)
shape = SubResource("RectangleShape2D_dth4f")

[connection signal="input_event" from="." to="." method="_on_Draggable_input_event"]
[connection signal="input_event" from="Skeleton2D/Palm/IK Targets/Limb Index" to="Skeleton2D/Palm/IK Targets/Limb Index" method="_on_Draggable_input_event"]
[connection signal="button_down" from="Skeleton2D/Palm/PalmPolygon/Palm Select" to="Skeleton2D" method="_on_palm_select_button_down"]
[connection signal="button_up" from="Skeleton2D/Palm/PalmPolygon/Palm Select" to="Skeleton2D" method="_on_palm_select_button_up"]
[connection signal="button_down" from="Skeleton2D/Palm/Thumb1/Thumb2/Thumb2Polygon/Thumb Select" to="Skeleton2D" method="_on_thumb_select_button_down"]
[connection signal="button_up" from="Skeleton2D/Palm/Thumb1/Thumb2/Thumb2Polygon/Thumb Select" to="Skeleton2D" method="_on_thumb_select_button_up"]
[connection signal="button_down" from="Skeleton2D/Palm/Index1/Index2/Index2Polygon/Index Select" to="Skeleton2D" method="_on_index_select_button_down"]
[connection signal="button_up" from="Skeleton2D/Palm/Index1/Index2/Index2Polygon/Index Select" to="Skeleton2D" method="_on_index_select_button_up"]
[connection signal="button_down" from="Skeleton2D/Palm/Mid1/Mid2/Mid2Polygon/Mid Select" to="Skeleton2D" method="_on_mid_select_button_down"]
[connection signal="button_up" from="Skeleton2D/Palm/Mid1/Mid2/Mid2Polygon/Mid Select" to="Skeleton2D" method="_on_mid_select_button_up"]
[connection signal="button_down" from="Skeleton2D/Palm/Ring1/Ring2/Ring2Polygon/Ring Select" to="Skeleton2D" method="_on_ring_select_button_down"]
[connection signal="button_up" from="Skeleton2D/Palm/Ring1/Ring2/Ring2Polygon/Ring Select" to="Skeleton2D" method="_on_ring_select_button_up"]
[connection signal="button_down" from="Skeleton2D/Palm/Pinky1/Pinky2/Pinky2Polygon/Pinky Select" to="Skeleton2D" method="_on_pinky_select_button_down"]
[connection signal="button_up" from="Skeleton2D/Palm/Pinky1/Pinky2/Pinky2Polygon/Pinky Select" to="Skeleton2D" method="_on_pinky_select_button_up"]
